--- a/assessment.html
+++ b/assessment.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>keroro-oによるあなたのいいところ診断</title>
+	<title>keroro-oが作ったあなたのいいところ診断</title>
 	<link rel="stylesheet" href="assessment.css">
 </head>
 
